deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-games
spec:
  replicas: 2
  selector:
    matchLabels:
      app: board-games
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: board-games
    spec:
      containers:
      - name: board-games
        image: gcr.io/PROJECT_ID/IMAGE:TAG
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
